--- a/package.json
+++ b/package.json
@@ -1,7 +1,25 @@
 {
+  "name": "pizzeria-mamma-mia",
+  "version": "1.0.0",
+  "private": true,
   "dependencies": {
     "bootstrap": "^5.3.3",
     "react-bootstrap": "^2.10.4",
-    "react-icons": "^5.2.1"
-  }
+    "react-icons": "^5.2.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "4.0.3"
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
+  "homepage": "https://github.com/LJAgudelo/Pizzeria_MammaMia.git"
 }
